--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <style>
         canvas { 
             background: #000; display: block; margin: 0 auto; border: 4px solid #444; 
-            cursor: crosshair; max-width: 100%; height: auto; 
+            cursor: crosshair; max-width: 100%; height: auto; -webkit-touch-callout: none; -webkit-user-select: none;
         }
         body { 
             background: #111; color: white; font-family: sans-serif; text-align: center; 
-            margin: 0; padding: 10px; touch-action: manipulation;
+            margin: 0; padding: 10px; touch-action: manipulation; touch-action: pan-y;
         }
         .toolbar { 
             background: #222; padding: 10px; margin-bottom: 10px; border-radius: 8px; 
             border: 1px solid #444; display: flex; justify-content: center; flex-wrap: wrap; gap: 5px;
+        }
+        .canvas-container {
+            width: 100%;
+            max-width: 400px;
+            margin: 0 auto;
+            overflow: hidden;
+            touch-action: pan-y;
         }
         .tool-btn { 
             padding: 10px 20px; font-weight: bold; cursor: pointer; border: 2px solid transparent; 
@@ -40,7 +47,10 @@
         Gold: $<span id="goldDisplay">0</span> | Cargo: <span id="cargoDisplay">0</span>/<span id="maxDisplay">10</span>
     </div>
     
-    <canvas id="gameCanvas" width="400" height="500"></canvas>
+    <div class="canvas-container">
+        <canvas id="gameCanvas" width="400" height="500"></canvas>
+    </div>
+
     
     <div class="toolbar">
         <button class="action" onclick="buyUpgrade('cargo')">Cargo +5 ($100)</button>
@@ -265,7 +275,20 @@ function draw() {
 
 // --- LISTENERS ---
 canvas.addEventListener('mousedown', e => handleInput(e.clientX, e.clientY));
-canvas.addEventListener('touchstart', e => { e.preventDefault(); handleInput(e.touches[0].clientX, e.touches[0].clientY); }, { passive: false });
+canvas.addEventListener('touchstart', e => {
+    // If the user uses two fingers, let them zoom/scroll naturally
+    if (e.touches.length > 1) return;
+
+    // Process the game input
+    handleInput(e.touches[0].clientX, e.touches[0].clientY);
+
+    // Only prevent scroll if we are actually intending to move or build
+    // If the user just swipes quickly, the browser will now allow a scroll
+    if (goal || currentTool === 'ladder') {
+        e.preventDefault();
+    }
+}, { passive: false });
+
 
 function buyUpgrade(t) {
     if (t === 'cargo' && player.gold >= 100) { player.gold -= 100; player.maxCargo += 5; }
