Player colour changed
Player is now blue

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ function draw() {
             }
         }
     }
-    ctx.fillStyle = '#f1c40f'; // Player
+    ctx.fillStyle = '#0000FF'; // Player
     ctx.fillRect(player.x * TILE_SIZE + 5, (player.y * TILE_SIZE) - offsetY + 5, TILE_SIZE - 10, TILE_SIZE - 10);
     requestAnimationFrame(draw);
 // Draw Blocked Message Overlay
