--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@ function draw() {
                 ctx.fillStyle = (b.type === 'gem' && revealed) ? '#00FF00' : (b.type === 'bedrock' ? '#111' : '#8B4513');
                 ctx.fillRect(rx, ry, TILE_SIZE - 2, TILE_SIZE - 2);
 
+                // Add this temporary "safety" line:
+                if (b.hp > 0 && !b.maxHP) b.maxHP = (b.type === 'gem' ? 3 : 1) * player.level;
+                
                 // --- CRACKING EFFECT --- On top of block base
                 if (b.hp < b.maxHP) {
                     ctx.strokeStyle = "white";
@@ -446,6 +449,7 @@ draw();
 </body>
 
 </html>
+
 
 
 
