--- a/index.html
+++ b/index.html
@@ -189,19 +189,24 @@ function findPath(startX, startY, targetX, targetY) {
     if (n.x >= 0 && n.x < COLS && n.y >= 0 && n.y < ROWS && !visited.has(id)) {
         let canMove = world[n.y][n.x].mined;
 
-        // Vertical check
+        // --- VERTICAL RULES ---
         if (n.y < curr.y) { // Attempting to go UP
-            let dist = curr.y - n.y;
             let hasLadder = world[curr.y][curr.x].hasLadder;
+            let dist = curr.y - n.y;
 
-            // Rule: To go up, you need a ladder OR it must be exactly a 1-block hop
-            if (!hasLadder && dist > 1) {
-                canMove = false;
-            }
-            // Rule: You can't hop UP if there's a ceiling directly above you
-            // (Only applies if you're trying to jump into a space)
-            if (!hasLadder && dist === 1 && !world[n.y][n.x].mined) {
-                canMove = false;
+            if (dist === 1) { 
+                // STEP UP LOGIC:
+                // You can move up 1 tile if:
+                // 1. You are on a ladder
+                // 2. OR the tile BELOW your destination is solid (a ledge to stand on)
+                let tileBelowTargetIsSolid = (n.y + 1 < ROWS) && !world[n.y + 1][n.x].mined;
+                
+                if (!hasLadder && !tileBelowTargetIsSolid) {
+                    canMove = false; 
+                }
+            } else if (dist > 1) {
+                // More than 1 block ALWAYS requires a ladder at current feet
+                if (!hasLadder) canMove = false;
             }
         }
 
@@ -230,11 +235,6 @@ function move() {
         if (player.y < ROWS - 1 && world[player.y][player.x].mined && 
             !world[player.y][player.x].hasLadder && 
             !world[player.y+1][player.x].mined) {
-            // This is a stable floor, we are good.
-        } else if (player.y < ROWS - 1 && world[player.y][player.x].mined && 
-                   !world[player.y][player.x].hasLadder && 
-                   world[player.y+1][player.x].mined) {
-             // We are in mid-air! Fall 1 tile.
              player.y++;
              currentPath = []; // Cancel the old path because we fell
         }
@@ -451,6 +451,7 @@ draw();
 </body>
 
 </html>
+
 
 
 
